# doc-router

./: .dockerignore  .env.example.aws_lightsail  .env.example.local  .env.example.mongodb  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose-embedded-mongo.yml  docker-compose.yml  jest.config.js  makefile  pyproject.toml  start-all.sh
.github/workflows/: backend-tests.yml  ci.yml  cla-validate.yml  release.yml  (+1 more)
backend/: requirements.txt
deploy/: PLANNING.md  README.md
docs/: INSTALL.aws.md  INSTALL.docker.md  INSTALL.dockerhub.md  PERFORMANCE.md  docrouter_binary.md  docrouter_credentials.md  docrouter_doc_flow_integration.md  docrouter_docker.md  docrouter_evals.md  docrouter_fulltrace.md  docrouter_http_request.md  docrouter_microsoft_product_strategy.md  docrouter_nodes.md  docrouter_pin_binary.md  docrouter_power_automate_connector.yaml  docrouter_salesforce.md  dynamic_node_types.md  env.md  env_fastapi_url_consolidation.md  flow_parameter_schema_ui_plan.md  flow_resume.md  flows.md  flows2.md  flows_execute_step_plan.md  flows_js.md  flows_logs_ui_plan.md  flows_n8n_compat.md  flows_ui.md  flows_workflow_interop.md  license.md  map_reduce_node_plan.md  mongodb_community_edition_install.md  n8n.md  n8n_binary.md  n8n_nodes.md  n8n_port_guide.md  n8n_ui.md  node_param_validation.md  node_ui_params.md  ocr_vendor_recommendation_matrix.md  (+8 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
schemas/: flow-node-manifest-v1.json
tools/: dump_credentials.js  dump_nodes.js  port_credentials.py  port_nodes.py  run-doc-router-docker.sh
(+528 files in other folders)
